Обновлено описание программы, добавлены подсказки по взаимодействию

--- a/src/main/resources/help.html
+++ b/src/main/resources/help.html
@@ -1,8 +1,23 @@
 <html>
-<body style="text-align: center;">
-<h1>Задача 4 – ICGWireframe</h1>
-<p style="margin-bottom: 10px;">Приложение для отображения в виде проволочной модели тела вращения с образующей, строящейся по задаваемым опорным
+<body>
+<h1 style="text-align: center;">Задача 4 – ICGWireframe</h1>
+<p style="margin-bottom: 10px; text-align: center;">Приложение для отображения в виде проволочной модели тела вращения с образующей, строящейся по задаваемым опорным
     точкам с помощью B-сплайна.</p>
-<p>Автор: Дмитрий Пономарев</p>
+<h3 style="margin-left: 10px;">Взаимодействия с основным окном</h3>
+<ol>
+    <li>ЛКМ - вращение фигуры по осям XY</li>
+    <li>ПКМ - вращение по оси Z</li>
+    <li>Колесико мыши - масштабировани</li>
+</ol>
+<h3 style="margin-left: 10px;">Взаимодействия с редактором</h3>
+<ol>
+    <li>ЛКМ по свободному месту - двигать камеру</li>
+    <li>ЛКМ по точке - перемещение точки</li>
+    <li>shift + ЛКМ по точке - двигать всю фигуру</li>
+    <li>ПКМ - поставить точку</li>
+    <li>shift + ПКМ по точке - удалить точку</li>
+    <li>Колесико мыши - масштабировани</li>
+</ol>
+<p style="text-align: center;">Автор: Дмитрий Пономарев</p>
 </body>
 </html>
